# MCPForge

./: .gitignore  .golangci.yml  KNOWN_BROKEN.md  README.md  Taskfile.yml  audit_scorecard.json  main.go
.github/workflows/: alert-sync-issues.yml  ci.yml  codeql.yml  doc-links.yml  fr-coverage.yml  go.yml  lint.yml  quality-gate.yml  scorecard.yml  trufflehog.yml
cmd/generate/: main_test.go  tables.go
docs/: index.md
docs/boundary/: MCPForge.md
docs/intent/: MCPForge.md
docs/worklogs/: ABSORPTION_PLAN.md
integrationtests/tests/common/: framework.go
integrationtests/tests/typescript/hover/: hover_test.go
integrationtests/workspaces/rust/: Cargo.toml
internal/logging/: logger.go  logger_test.go
internal/lsp/: lsp_test.go
internal/protocol/: uri_test.go
internal/watcher/: watcher.go
tests/: integration_stability_test.go
